kubernetes/deployment.yml
# Kubernetes Deployment for Tic Tac Toe Application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tic-tac-toe-deployment
  namespace: tic-tac-toe
  labels:
    app: tic-tac-toe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tic-tac-toe
  template:
    metadata:
      labels:
        app: tic-tac-toe
    spec:
      containers:
        - name: tic-tac-toe-container
          image: ghcr.io/toakhildevops/tictac:sha-3a2adea4d9ec11b274b938e19bdd449247c9d34e
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: ghcr-secret
